--- a/P4M_Notebook1.ipynb
+++ b/P4M_Notebook1.ipynb
@@ -20,12 +20,23 @@
       "version": "3.6.7"
     },
     "colab": {
-      "name": "P4M_Notebook1.ipynb",
+      "name": "Copy of P4M_Notebook1.ipynb",
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/domodu/Math-152/blob/main/P4M_Notebook1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
