--- a/P4M_Notebook1.ipynb
+++ b/P4M_Notebook1.ipynb
@@ -3578,11 +3578,23 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e73f7e60-698f-455d-a380-218d201b5bfa"
+        "outputId": "3c6fbd39-9bf0-4790-9b12-05700247e5d4"
       },
       "source": [
         "#  Explore and experiment.\n",
         "from mpmath import *\n",
+        "def P(x):\n",
+        "  if x == 2:\n",
+        "    return 8\n",
+        "  else:\n",
+        "    return (2 * p(x - 1) * P(x - 1)) / (p(x-1) + P(x-1)) \n",
+        "\n",
+        "def p(x):\n",
+        "  if x == 2:\n",
+        "    return 4 * sqrt(2)\n",
+        "  else:\n",
+        "    return sqrt(4 * sqrt(2))  \n",
+        "\n",
         "mp.dps = 100\n",
         "def atan(x):\n",
         "  a = 0\n",
@@ -3591,15 +3603,15 @@
         "    return a + atan\n",
         "\n",
         "pi = 16 * atan(1/5) - 4 * atan(1/239)\n",
-        "print(pi)\n",
+        "print('pi is',pi,'P(10)',P(10),'p(10)',p(10))\n",
         "16 * mp.atan(1/5) - 4 * mp.atan(1/239)"
       ],
-      "execution_count": 75,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "3.18326359832636\n"
+            "pi is 3.18326359832636 P(10) 2.383670409736845925939312805677532669245396580252398512951343284767114728358352104462339519718973586 p(10) 2.378414230005442133434999941120951830585944184927634826038004449438933336453834319741562689076275347\n"
           ],
           "name": "stdout"
         },
@@ -3613,7 +3625,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 75
+          "execution_count": 6
         }
       ]
     }
