--- a/P4M_Notebook2.ipynb
+++ b/P4M_Notebook2.ipynb
@@ -69,15 +69,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-sH7F-YEuXdk"
+        "id": "-sH7F-YEuXdk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "86950074-5500-44ff-e5ad-678a002bc061"
       },
       "source": [
         "def square(x):\n",
         "    answer = x * x\n",
-        "    return answer"
+        "    return answer\n",
+        "\n",
+        "square(19)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "361"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -96,19 +115,37 @@
       "source": [
         "from dis import dis"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6ZYvlyCYuXdl"
+        "id": "6ZYvlyCYuXdl",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bfa1ab15-a9fb-4b38-cf28-c19d362ce03b"
       },
       "source": [
         "dis(square)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "  2           0 LOAD_FAST                0 (x)\n",
+            "              2 LOAD_FAST                0 (x)\n",
+            "              4 BINARY_MULTIPLY\n",
+            "              6 STORE_FAST               1 (answer)\n",
+            "\n",
+            "  3           8 LOAD_FAST                1 (answer)\n",
+            "             10 RETURN_VALUE\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -126,24 +163,58 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "J1Drx8OauXdm"
+        "id": "J1Drx8OauXdm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c55faa73-0fe5-4c12-fe95-3f2ca8e019fc"
       },
       "source": [
         "square(12)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "144"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RPfYsUfAuXdm"
+        "id": "RPfYsUfAuXdm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e2c099ad-0167-4d90-8343-1d8bd258ec3f"
       },
       "source": [
         "square(1.5)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.25"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -180,16 +251,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kblJD_kQuXdn"
+        "id": "kblJD_kQuXdn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a88bfbe2-16db-4b34-8461-83d763f02beb"
       },
       "source": [
         "def display_divmod(a,b):\n",
         "    quotient = a // b # Integer division\n",
         "    remainder = a % b #\n",
-        "    print(\"{} = {} ({}) + {}\".format(a,quotient,b,remainder))"
+        "    print(\"{} = {} ({}) + {}\".format(a,quotient,b,remainder))\n",
+        "\n",
+        "display_divmod(9,3)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "9 = 3 (3) + 0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -203,13 +288,46 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "44kJtTHJuXdn"
+        "id": "44kJtTHJuXdn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cf3adf8e-c71b-4bd6-fa9e-5f9ff53d0350"
       },
       "source": [
         "dis(display_divmod)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "  2           0 LOAD_FAST                0 (a)\n",
+            "              2 LOAD_FAST                1 (b)\n",
+            "              4 BINARY_FLOOR_DIVIDE\n",
+            "              6 STORE_FAST               2 (quotient)\n",
+            "\n",
+            "  3           8 LOAD_FAST                0 (a)\n",
+            "             10 LOAD_FAST                1 (b)\n",
+            "             12 BINARY_MODULO\n",
+            "             14 STORE_FAST               3 (remainder)\n",
+            "\n",
+            "  4          16 LOAD_GLOBAL              0 (print)\n",
+            "             18 LOAD_CONST               1 ('{} = {} ({}) + {}')\n",
+            "             20 LOAD_ATTR                1 (format)\n",
+            "             22 LOAD_FAST                0 (a)\n",
+            "             24 LOAD_FAST                2 (quotient)\n",
+            "             26 LOAD_FAST                1 (b)\n",
+            "             28 LOAD_FAST                3 (remainder)\n",
+            "             30 CALL_FUNCTION            4\n",
+            "             32 CALL_FUNCTION            1\n",
+            "             34 POP_TOP\n",
+            "             36 LOAD_CONST               0 (None)\n",
+            "             38 RETURN_VALUE\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -224,13 +342,25 @@
       "cell_type": "code",
       "metadata": {
         "scrolled": true,
-        "id": "-5N5Px0XuXdn"
+        "id": "-5N5Px0XuXdn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c95c88f1-ecd2-480b-9d15-1c5d92e5a9f5"
       },
       "source": [
         "display_divmod(23,5)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "23 = 4 (5) + 3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -248,24 +378,48 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qYo13qoyuXdn"
+        "id": "qYo13qoyuXdn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2bd0de34-d8b2-4dcd-fa8a-4e632211ff6e"
       },
       "source": [
         "print(\"My favorite number is {}\".format(17))  # The .format \"method\" substitutes 17 for {}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "My favorite number is 17\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-XwFB1SBuXdo"
+        "id": "-XwFB1SBuXdo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4a61036a-b434-4ae0-9afc-76b403f0cab1"
       },
       "source": [
         "print(\"{} + {} = {}\".format(13,12,13+12))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "13 + 12 = 25\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -279,7 +433,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IVmzfGzsuXdo"
+        "id": "IVmzfGzsuXdo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3417557d-0110-4ffc-fd8b-ba0c03670c2e"
       },
       "source": [
         "print (\"The number {} comes before {}.\".format(1,2)) # This should be familiar.\n",
@@ -287,8 +445,18 @@
         "print (\"The number {1} comes before {1}.\".format(1,2)) # Got it now?\n",
         "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The number 1 comes before 2.\n",
+            "The number 2 comes before 1.\n",
+            "The number 2 comes before 2.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -302,15 +470,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cDQWP_m4uXdo"
+        "id": "cDQWP_m4uXdo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3559302e-d673-4951-a656-b36bd1ac0b5b"
       },
       "source": [
         "print(\"pi is approximately {0}\".format(3.14159265))\n",
         "print(\"pi is approximately {0:f}\".format(3.14159265)) # The \"f\" in \"0:f\" formats the float.\n",
         "print(\"pi is approximately {0:0.3f}\".format(3.14159265)) # Choose 3 digits of precision.\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "pi is approximately 3.14159265\n",
+            "pi is approximately 3.141593\n",
+            "pi is approximately 3.142\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -324,7 +506,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WI4b7-z6uXdp"
+        "id": "WI4b7-z6uXdp",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 270
+        },
+        "outputId": "6c0e93eb-3301-4c71-e6a1-dbccd78c3821"
       },
       "source": [
         "print(\"{:d} is a pretty big integer.\".format(2**100)) # d is the formatting code for integers.\n",
@@ -333,20 +520,54 @@
         "print(\"{:s} is a string.\".format('Hi there!')) # s is the formatting code for strings.\n",
         "print(\"{:d} will give us an error message.\".format(1/7))\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1267650600228229401496703205376 is a pretty big integer.\n",
+            "1267650600228229401496703205376.000000 is an integer, formatted like a float.\n",
+            "0.142857 is a float, of course.\n",
+            "Hi there! is a string.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-17-a243553941ff>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{:f} is a float, of course.\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{:s} is a string.\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Hi there!'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# s is the formatting code for strings.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{:d} will give us an error message.\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m: Unknown format code 'd' for object of type 'float'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Xa4ug6SMuXdp"
+        "id": "Xa4ug6SMuXdp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cfeade79-bcfa-41f0-a9ab-86033a2761fb"
       },
       "source": [
         "from math import sqrt  # Make sure the square root function is loaded.\n",
         "print(\"The square root of {0:d} is about {1:f}.\".format(1000, sqrt(1000)))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The square root of 1000 is about 31.622777.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -370,17 +591,56 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "i07v2EqWObeb"
+      },
+      "source": [
+        "1. ： is the signal scope.\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "J_WzLsqwuXdp"
+        "id": "J_WzLsqwuXdp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1f45865a-55a6-4c66-892e-4fcee1681399"
       },
       "source": [
         "#  Use this space to work on the Exercises.  \n",
         "#  Remember that you can add a new cell above/below by clicking to the left of a cell,\n",
-        "#  (the cell will have a blue bar at the left) and then pressing \"a\" or \"b\" on the keyboard.\n"
+        "#  (the cell will have a blue bar at the left) and then pressing \"a\" or \"b\" on the keyboard.\n",
+        "import mpmath\n",
+        "def area_circle(radius):\n",
+        "  area = 3.14159 * radius ** 2 \n",
+        "  print('The area of a circle of radius {} is {}'.format(radius,area))\n",
+        "area_circle(1)\n",
+        "\n",
+        "def factorial(n):\n",
+        "  a = 1\n",
+        "  for i in range(1,n+1):\n",
+        "    a = a * i\n",
+        "  print(\"The factorial of {} is {}\".format(n,a))\n",
+        "factorial(9)  \n",
+        "\n",
+        "a = \"yth\"\n",
+        "b = a.replace(\"yth\", \"arag\")\n",
+        "print(b)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The area of a circle of radius 1 is 3.14159\n",
+            "The factorial of 9 is 362880\n",
+            "arag\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
